- Fixed memory leaks and segfaults, patch by Joe Orton. - Fixed bug #45038 (Crash when using DateTimeZone object returned by   Date::getTimezone).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@262279 c90b9560-bf6c-de11-be94-00142212c4b1